# vertigo

./: CMakeLists.txt  package.xml
include/gtsam4/: switchVariableLinear.h
vertigo/: CMakeLists.txt
vertigo/examples/robustISAM2/: CMakeLists.txt  robustISAM2.cpp
vertigo/include/: planarSLAM.h  timer.h
vertigo/include/gtsam/: betweenFactorMaxMix.h
vertigo/include/gtsam2/: betweenFactorMaxMix.h  betweenFactorSwitchable.h  switchVariableLinear.h  switchVariableSigmoid.h
vertigo/include/gtsam4/: switchVariableLinear.h
vertigo/src/: CMakeLists.txt  planarSLAM.cpp
vertigo/src/gtsam/: CMakeLists.txt
