<?xml version="1.0"?>
<package>
  <name>vertigo_ros</name>
  <version>0.0.0</version> 
  <description>vertigo_ros</description>
  <maintainer email="milad@robots.ox.ac.uk">tcies</maintainer>

  <license>Closed</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_external_project_catkin</build_depend>
</package>
